# AADC

./: .gitignore  README.md  adtf_launcher.sh  readme_adtf_launcher.txt
AADC/src/aadcUser/: CMakeCacheinvalid.txt  CMakeLists.txt  CMakeLists.txt.user.f8755d0  Makefile  aadc_user.cbp  cmake_install.cmake  lucifer_CMakeLists.txt  nico_CMakeLists.txt
AADC/src/aadcUser/AccROIVisualization/: AccROIVisualization.cpp  AccROIVisualization.h  CMakeLists.txt
AADC/src/aadcUser/AccToSpeed/: AccToSpeed.cpp  AccToSpeed.h  CMakeLists.txt  Makefile  acc_to_speed.cbp  cmake_install.cmake
AADC/src/aadcUser/ActionStop/: ActionStop.cpp  ActionStop.h  CMakeLists.txt  stdafx.h
AADC/src/aadcUser/ActionStructReceiver/: ActionStructReceiver.cpp  ActionStructReceiver.h  CMakeLists.txt  stdafx.h
AADC/src/aadcUser/ActionStructSender/: ActionStructSender.cpp  ActionStructSender.h  CMakeLists.txt
AADC/src/aadcUser/AudioControlledSpeed/: AudioControlledSpeed.cpp  AudioControlledSpeed.h  CMakeLists.txt  stdafx.h
AADC/src/aadcUser/DriverModule/: CMakeLists.txt  DriverModuleFilter.cpp  DriverModuleFilter.h  Makefile  cmake_install.cmake  stdafx.h
AADC/src/aadcUser/EmergencyBreak/: EmergencyBreak.cpp  EmergencyBreak.h  Makefile  readme.txt
AADC/src/aadcUser/EmergencyCarDetection/: EmergencyCarDetection.cpp  EmergencyCarDetection.h  Makefile  README.txt  cmake_install.cmake  emergency_car_detection.cbp  rawCompareSignal_siren.txt  rawCompareSignal_siren_SAVE(High 50cm).txt  rawCompareSignal_siren_SAVE(Low).txt  rawCompareSignal_siren_SINUS(400Hz).txt
AADC/src/aadcUser/EmergencyCarDetectionBKP/: CMakeLists.txt  EmergencyCarDetection.cpp  EmergencyCarDetection.h  fftCompareSignal_siren (400HzSinus).txt  fftCompareSignal_siren.txt
AADC/src/aadcUser/FTO_CarPose/: CMakeLists.txt  Makefile  cCarPose.cpp  cCarPose.h  car_pos.cbp  cmake_install.cmake
AADC/src/aadcUser/FTO_MoveToPoint/: CMakeLists.txt  Makefile  cMoveToPoint.cpp  cMoveToPoint.h  cmake_install.cmake  stdafx.h
AADC/src/aadcUser/FTO_NegateSpeedController/: CMakeLists.txt  cNegateSpeed.cpp  cNegateSpeed.h  stdafx.h
AADC/src/aadcUser/FTO_PIDController/: CMakeLists.txt  cPIDController.cpp  cPIDController.h
AADC/src/aadcUser/FileWriter/: CMakeLists.txt  FileWriter.cpp  FileWriter.h  Makefile  cmake_install.cmake
AADC/src/aadcUser/IntersectionDetection/: CMakeLists.txt  IntersectionDetection.cpp  IntersectionDetection.h
AADC/src/aadcUser/IntersectionDetectorFilterNew/: CMakeLists.txt  IntersectionDetectorFilterNew.cbp  IntersectionDetectorFilterNew.cpp  IntersectionDetectorFilterNew.h  Makefile  PoseCache.h  cmake_install.cmake
AADC/src/aadcUser/KuerNico_UltrasonicACC/: CMakeLists.txt  KuerNico_UltrasonicACC.cpp  KuerNico_UltrasonicACC.h  stdafx.h
AADC/src/aadcUser/LaneDetection/: CMakeLists.txt  LaneDetection.cpp  LaneDetection.h  Makefile  cmake_install.cmake  lane_detection_user.cbp  stdafx.h
AADC/src/aadcUser/LaserPointerFollower/: CMakeLists.txt  LaserPointerFollower.cpp  LaserPointerFollower.h  Laserpointer_follower.cbp  Makefile  cmake_install.cmake
AADC/src/aadcUser/LightControl/: CMakeLists.txt  cLightControl.cpp  cLightControl.h  stdafx.h
AADC/src/aadcUser/MarkerDetector/: MarkerDetector.cpp  MarkerDetector.h  stdafx.h
AADC/src/aadcUser/MarkerDetectorNew/: MarkerDetectorNew.cpp  MarkerDetectorNew.h  cmake_install.cmake  marker_detector_new.cbp  stdafx.h
AADC/src/aadcUser/MarkerDetectorNew1107BKPBeforeLeftCurveCrossing/: CMakeLists.txt  Makefile  MarkerDetectorNew.cpp  MarkerDetectorNew.h  cmake_install.cmake
AADC/src/aadcUser/Mean/: CMakeLists.txt  cMean.cpp  cMean.h
AADC/src/aadcUser/MegaMonsterSelector/: CMakeLists.txt  Makefile  MegaMonsterSelector.cpp  MegaMonsterSelector.h  cmake_install.cmake
AADC/src/aadcUser/OCSelectSpeed/: CMakeLists.txt  Makefile  OCSelectSpeed.cpp  OCSelectSpeed.h  cmake_install.cmake
AADC/src/aadcUser/OC_MarkerDetectorNew/: CMakeLists.txt  Makefile  OCMarkerDetectorNew.cpp  OCMarkerDetectorNew.h  cmake_install.cmake
AADC/src/aadcUser/OC_StateControlManagement/: CMakeLists.txt  Makefile  OCStateControlManagement.cpp  OCStateControlManagement.h  StateControl.h  cmake_install.cmake  stdafx.h
AADC/src/aadcUser/ObjectSpecifier/: CMakeLists.txt  Makefile  ObjectSpecifier.cpp  ObjectSpecifier.h  cmake_install.cmake  stdafx.h
AADC/src/aadcUser/ObstacleDetection/: CMakeLists.txt  ObstacleDetection.cpp  ObstacleDetection.h  stdafx.h
AADC/src/aadcUser/OutputLimiter/: CMakeLists.txt  Makefile  OutputLimiter.cbp  OutputLimiter.cpp  OutputLimiter.h  cmake_install.cmake
AADC/src/aadcUser/PIDController/: PIDController.h.autosave
AADC/src/aadcUser/PID_GraphPlot/: CMakeLists.txt  GraphPlotFilter.cpp  GraphPlotFilter.h  GraphPlotWidget.cpp  GraphPlotWidget.h  pid_graph_plot.ui  stdafx.h
AADC/src/aadcUser/SCMTestCheckSpeed/: CMakeLists.txt  SCMTestCheckSpeed.cpp  SCMTestCheckSpeed.h  stdafx.h
AADC/src/aadcUser/SCMTestLimitSpeed/: CMakeLists.txt  SCMTestLimitSpeed.cpp  SCMTestLimitSpeed.h
AADC/src/aadcUser/SelectSpeed/: CMakeLists.txt  SelectSpeed.cpp  SelectSpeed.h  stdafx.h
AADC/src/aadcUser/SpeedController/: CMakeLists.txt  Makefile  SpeedController.cpp  SpeedController.h  cmake_install.cmake  speed_controller.cbp
AADC/src/aadcUser/SpeedTransmitter/: CMakeLists.txt  SpeedTransmitter.cpp  SpeedTransmitter.h  stdafx.h
AADC/src/aadcUser/StateControlManagement/: CMakeLists.txt  Makefile  StateControlManagement.cpp  StateControlManagement.h  cmake_install.cmake  statecontrol_management.cbp
AADC/src/aadcUser/SteeringController/: CMakeLists.txt  SteeringController.cpp  SteeringController.h  stdafx.h
AADC/src/aadcUser/TemplateFilter/: Makefile  TemplateFilter.h  cmake_install.cmake
AADC/src/aadcUser/TimerFilter/: CMakeLists.txt  Makefile  TimerFilter.cpp  TimerFilter.cpp.autosave  TimerFilter.h  cmake_install.cmake
AADC/src/aadcUser/TrafficLightSimulator/: CMakeLists.txt  Makefile  TrafficLightSimluator.cpp  TrafficLightSimluator.h  cmake_install.cmake  fragen.txt  stdafx.h
AADC/src/aadcUser/UltrasonicACC/: CMakeLists.txt  Makefile  ReadMeUSACC.txt  UltrasonicACC.cpp  (+2 more)
(+1615 files in other folders)
